<resources>
    <string name="app_name">level2</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mai Nhâm</string>
    <string name="nav_header_subtitle">Nhammt@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="tatamthanhthongbao">Tắt âm thanh thông báo</string>
    <string name="chapnhancuoctrochuyen">Chấp nhận cuộc trò chuyện</string>
    <string name="web1">Webside 1</string>
    <string name="web2">Webside 2</string>
    <string name="cuoctrochuyen">Cuộc trò chuyện</string>
    <string name="ticket">Ticket</string>
    <string name="livechat">LiveChat</string>
    <string name="giamsat">Giám sát</string>
    <string name="caidat">Cài đặt</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="trochuyennoibo">Trò chuyện nội bộ</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
