<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/margin_15dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_15dp"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/lltrangthai"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:textColor="@color/color_word"
                        android:id="@+id/tvtrangthai"
                        android:layout_marginTop="@dimen/margin_15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Trạng thái"></TextView>
                    <RelativeLayout
                        android:layout_marginTop="@dimen/margin_20dp"
                        android:id="@+id/rlOnline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ccOnline"
                            android:layout_width="@dimen/circle"
                            android:layout_centerVertical="true"
                            android:background="@drawable/background_online"
                            android:layout_height="@dimen/circle"/>
                        <TextView
                            android:id="@+id/tvOnline"
                            android:layout_toRightOf="@id/ccOnline"
                            android:layout_marginLeft="@dimen/margin_10dp"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Online"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:id="@+id/rlAway"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ccAway"
                            android:layout_centerVertical="true"
                            android:layout_width="@dimen/circle"
                            android:layout_height="@dimen/circle"
                            android:background="@drawable/background_away" />
                        <TextView
                            android:layout_centerVertical="true"
                            android:id="@+id/tvAway"
                            android:layout_toRightOf="@id/ccAway"
                            android:layout_marginLeft="@dimen/margin_10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Away"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:id="@+id/rlInvisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/ccInvisible"
                            android:layout_width="@dimen/circle"
                            android:background="@drawable/background_invisible"
                            android:layout_centerVertical="true"
                            android:layout_height="@dimen/circle"/>
                        <TextView
                            android:id="@+id/tvInvisible"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/ccInvisible"
                            android:layout_marginLeft="@dimen/margin_10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Invisible"/>
                    </RelativeLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_centerVertical="true"
                        android:id="@+id/tvSound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tatamthanhthongbao"/>
                    <ImageView
                        android:src="@drawable/ic_on"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="@dimen/margin_30dp"
                        android:layout_height="@dimen/margin_30dp"
                        android:id="@+id/ivSound"/>
                </RelativeLayout>
                <TextView
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:textColor="@color/color_word"
                    android:text="@string/chapnhancuoctrochuyen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_centerVertical="true"
                        android:id="@+id/tvweb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/web1"/>
                    <ImageView
                        android:src="@drawable/ic_off"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="@dimen/margin_30dp"
                        android:layout_height="@dimen/margin_30dp"
                        android:id="@+id/ivWeb1"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_centerVertical="true"
                        android:id="@+id/tvWeb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/web2"/>
                    <ImageView
                        android:src="@drawable/ic_on"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_width="@dimen/margin_30dp"
                        android:layout_height="@dimen/margin_30dp"
                        android:id="@+id/ivWeb2"/>
                </RelativeLayout>
                <TextView
                    android:layout_marginTop="@dimen/margin_15dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#cacaca" />
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivtalk"
                        android:layout_centerVertical="true"
                        android:layout_width="@dimen/margin_icon"
                        android:layout_height="@dimen/margin_icon"
                        android:src="@drawable/ic_message"/>
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_toRightOf="@id/ivtalk"
                        android:id="@+id/tvtalk"
                        android:layout_marginLeft="@dimen/margin_20dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cuoctrochuyen"/>
                    <androidx.cardview.widget.CardView
                        android:layout_alignParentRight="true"
                        android:id="@+id/cardTalk"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                       app:cardBackgroundColor="@color/color_orange"
                        app:cardCornerRadius="10dp" >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:id="@+id/tvTalkNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="10"
                                android:textSize="12sp"
                                android:textColor="#ffffff" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivticket"
                        android:layout_centerVertical="true"
                        android:layout_width="@dimen/margin_icon"
                        android:layout_height="@dimen/margin_icon"
                        android:src="@drawable/ic_tochucboi"/>
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_toRightOf="@id/ivticket"
                        android:id="@+id/tvticket"
                        android:layout_marginLeft="@dimen/margin_20dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket"/>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardTicket"
                       android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:cardBackgroundColor="@color/color_orange"
                        app:cardCornerRadius="10dp" >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/tvTicketNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="2"
                                android:textSize="12sp"
                                android:textColor="#ffffff" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivlivechat"
                        android:layout_width="@dimen/margin_icon"
                        android:layout_height="@dimen/margin_icon"
                        android:src="@drawable/ic_live" />
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_toRightOf="@id/ivlivechat"
                        android:id="@+id/tvlivechat"
                        android:layout_marginLeft="@dimen/margin_20dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/livechat"/>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardLivechat"
                        android:layout_alignParentRight="true"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:cardBackgroundColor="@color/color_orange"
                        app:cardCornerRadius="10dp" >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/tvLivechatNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="10"
                                android:textSize="12sp"
                                android:textColor="#ffffff" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivgiamsat"
                        android:layout_centerVertical="true"
                        android:layout_width="@dimen/margin_icon"
                        android:layout_height="@dimen/margin_icon"
                        android:src="@drawable/ic_doituong"/>
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_toRightOf="@id/ivgiamsat"
                        android:layout_marginLeft="@dimen/margin_20dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/giamsat"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivCaidat"
                        android:layout_centerVertical="true"
                        android:layout_width="@dimen/margin_icon"
                        android:layout_height="@dimen/margin_icon"
                        android:src="@drawable/ic_congcuhotro"/>
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_toRightOf="@id/ivCaidat"
                        android:layout_marginLeft="@dimen/margin_20dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/caidat"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivTrochuyennoibo"
                        android:layout_centerVertical="true"
                        android:layout_width="@dimen/margin_icon"
                        android:layout_height="@dimen/margin_icon"
                        android:src="@drawable/ic_menu_send"/>
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_toRightOf="@id/ivTrochuyennoibo"
                        android:layout_marginLeft="@dimen/margin_20dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trochuyennoibo"/>
                </RelativeLayout>
                <TextView
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#cacaca"/>
                <RelativeLayout
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/ivLogout"
                        android:layout_centerVertical="true"
                        android:layout_width="@dimen/margin_icon"
                        android:layout_height="@dimen/margin_icon"
                        android:src="@drawable/ic_logout"/>
                    <TextView
                        android:textColor="@color/color_word"
                        android:layout_toRightOf="@id/ivLogout"
                        android:layout_marginLeft="@dimen/margin_20dp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dangxuat"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>